--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -22,14 +22,7 @@ jobs:
           sudo mv aws-nuke-v2.25.0-linux-amd64 /usr/local/bin/aws-nuke
           ls -ltr /usr/local/bin/aws-nuke
         shell: bash  
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-region: us-east-2
-          role-to-assume: arn:aws:iam::489455091964:role/GitHubAction-AssumeRoleWithAction
-          role-session-name: MySessionName   
-        
       - name: dry run aws-nuke
         run:
-          aws-nuke -c config/nuke-config.yml
+          aws-nuke -c config/nuke-config.yml --access-key-id ${{ secrets.AWS_ACCESS_KEY_ID }} --secret-access-key ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
         shell: bash  
