--- a/config/nuke-config.yml
+++ b/config/nuke-config.yml
@@ -1,9 +1,25 @@
 regions:
+- us-east-1
 - eu-west-1
+- eu-central-1
+- ap-southeast-1
+- ap-southeast-2
+- ap-northeast-1
+- ap-northeast-2
+- ap-south-1
+- sa-east-1
 - global
 
 account-blocklist:
-- "489455091964" # production
+- "000000000000" # production
 
 accounts:
-  "489455091964": {} # aws-nuke-example
+  "489455091964": {} # sandbox account
+
+resource-types:
+  excludes:
+  - IAMUser
+  - IAMGroup
+  - IAMRole
+  - IAMPolicy
+  - IAMAccessKey  
